--- a/src/app/quiz.component.html
+++ b/src/app/quiz.component.html
@@ -3,6 +3,8 @@
   <div *ngIf="quiz" class="quiz-panel">
     <h2 class="page-secondary-title-label">{{quiz.title}}</h2>
 
+    <a class="quiz-list-button-answer-questions" [routerLink]="['/question']" [queryParams]="{'quiz-id': quiz.id}">Answer Questions</a>
+
     <div *ngFor="let section of quiz.sections"
       class="quiz-section">
       <h3>{{section.title}}</h3>
