--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,11 @@
 /** From GWT's clean.css:
  */
 
-
 body, table td, select, button {
   font-family: Arial Unicode MS, Arial, sans-serif;
   font-size: small;
 }
-pre {
-  font-family: "courier new", courier;
-  font-size: small;
-}
+
 body {
   color: black;
   margin: 10px;
@@ -18,6 +14,7 @@ body {
   background: #fff;
   direction: ltr;
 }
+
 a, a:visited {
   color: #0066cc;
   text-decoration:none;
@@ -26,10 +23,6 @@ a, a:visited {
 a:hover {
   color: #0066cc;
   text-decoration:underline;
-}
-
-select {
-  background: white;
 }
 
 /** Application-specific CSS rules. */
@@ -271,25 +264,9 @@ body {
     font-size: medium;
 }
 
-.result-panel {
-
-}
-
 .choices-panel {
     margin-top: 1em;
     margin-bottom: 1em;
-}
-
-.question-label {
-
-}
-
-.question-anchor {
-
-}
-
-.sign-in-button {
-
 }
 
 .about-link {
@@ -300,10 +277,6 @@ body {
 
 .username-label {
     margin-left: 1em;
-}
-
-.username-title-label {
-
 }
 
 .menu-panel {
@@ -386,35 +359,8 @@ background-color: #B6B2DD;
     color: #2F4550;
 }
 
-.status-panel {
-}
-
-.login-panel {
-}
-
 .login-failed {
     font-weight: bold;
-}
-
-.score {
-
-}
-
-.user-name {
-
-}
-
-
-.version-label {
-
-}
-
-.logout-label {
-
-}
-
-.button-reset-sections {
-
 }
 
 .button-answer-questions {
@@ -620,7 +566,7 @@ h4 * {
     font-size: medium;
 }
 
-.gwt-TextBox.question-answer-textbox {
+.question-answer-textbox {
     font-size: medium;
 }
 
@@ -653,17 +599,8 @@ h4 * {
     font-weight: bolder;
 }
 
-.user-answer-hyperlink {
-
-}
-
 .label-score {
     color: #586F7C;
-}
-
-
-.progress-bar {
-
 }
 
 .progress-part-correct-once {
@@ -691,16 +628,8 @@ h4 * {
 
 }
 
-
 .label-problem-questions {
     margin-bottom: 1em;
-}
-
-.panel-problem-questions {
-}
-
-.problem-answer-hyperlink {
-
 }
 
 .problem-answer-score {
@@ -711,10 +640,6 @@ h4 * {
     padding: 0.3em;
     float: left;
     clear: right;
-}
-
-.about-label {
-
 }
 
 .show-from-panel {
@@ -767,18 +692,6 @@ h4 * {
     color: red;
 }
 
-.server-loading-label {
-
-}
-
-.quiz-list-panel {
-
-}
-
-.quiz-list-row {
-
-}
-
 .quiz-list-row-buttons-panel {
     float: right;
 }
@@ -791,10 +704,6 @@ h4 * {
 .quiz-list-row .button-history {
     float: right;
     margin-bottom: 1em;
-}
-
-.quiz-panel {
-
 }
 
 /* TODO: Make this not apply to a h2 inside sub-divs? */
@@ -821,10 +730,6 @@ h4 * {
 .quiz-section h3 a:visited {
 
     color: #0066cc;
-}
-
-.quiz-sub-section {
-
 }
 
 .quiz-question-answer {
