--- a/src/app/user-history-sections.component.html
+++ b/src/app/user-history-sections.component.html
@@ -16,17 +16,16 @@
 
             <h4>Problem Questions</h4>
             <div class="panel-problem-questions">
-              <!-- TODO: Extra checks to get the real count. -->
-              <p *ngIf="stats.problemQuestionHistoriesCount <= 0" class="problem-answer clearfix">None Yet</p>
+              <p *ngIf="problemQuestionsCount(stats) <= 0; else elseTemplate" class="problem-answer clearfix">None Yet</p>
 
-              <ng-container *ngIf="stats.problemQuestionHistoriesCount > 0">
+              <ng-template #elseTemplate>
                 <ng-container *ngFor="let question of stats.topProblemQuestionHistories">
                   <p class="problem-answer clearfix">
                   <span class="problem-answer-score">-{{question.countAnsweredWrong}}</span>
                     <a class="problem-answer-hyperlink" [routerLink]="['/question']" [queryParams]="{'quiz-id': quizId, 'section-id': section.id, 'question-id': question.questionId}">{{questionTitle(question)}}</a>
                   </p>
                 </ng-container>
-              </ng-container>
+              </ng-template>
 
             </div>
           </ng-container>
