Component selectors: Prefix with app-.
As preferred by ts-lint.

--- a/src/app/question.component.html
+++ b/src/app/question.component.html
@@ -40,4 +40,4 @@
     </ng-container>
   </ng-container>
 </div>
-<user-history-sections></user-history-sections>
+<app-user-history-sections></app-user-history-sections>
