--- a/src/app/quiz.component.html
+++ b/src/app/quiz.component.html
@@ -58,4 +58,4 @@
     </div>
   </div>
 </div>
-<user-history-sections></user-history-sections>
+<app-user-history-sections></app-user-history-sections>
