--- a/src/app/user.component.html
+++ b/src/app/user.component.html
@@ -1,5 +1,5 @@
 <h2 class="page-title-label">Profile</h2>
-<user-status></user-status>
+<app-user-status></app-user-status>
 
 <div class="user-status-panel">
   <h2>History</h2>
