UserStatus: Show logout only on the user page.
By letting the HTML pass an attribute.

--- a/src/app/user-status.component.html
+++ b/src/app/user-status.component.html
@@ -11,8 +11,8 @@
       </div>
     </div>
 
-    <p>
-      <a *ngIf="loginInfo.nickname" href="{{loginInfo.logoutUrl}}">Log Out</a>
+    <p *ngIf="showLogOutWhenAppropriate && loginInfo.nickname">
+      <a href="{{loginInfo.logoutUrl}}">Log Out</a>
     </p>
   </ng-container>
 </div>
