--- a/src/app/user.component.html
+++ b/src/app/user.component.html
@@ -1,7 +1,7 @@
 <h2 class="page-title-label">Profile</h2>
 
 <div class="user-status-panel">
-  <app-user-status></app-user-status>
+  <app-user-status showLogOutWhenAppropriate="true"></app-user-status>
 
   <h2>History</h2>
   <div class="user-status-answers-panel">
