UserStatus: Move some CSS into main styles.css.
Angular seems to remove any CSS selectors that use CSS classes
that are not used in the component or its children. So we put the
.menu-others-panel .user-status-panel (matching any user-status-panel
that is inide a menu-others-panel) in the parent CSS, leaving just
the CSS rule that should apply for any user-status-panel use.

--- a/src/styles.css
+++ b/src/styles.css
@@ -315,6 +315,12 @@ background-color: #B6B2DD;
     float: right;
 }
 
+.menu-others-panel .user-status-panel {
+  float: right;
+  clear: both;
+}
+
+
 .button-answer-questions {
     /* Generic button style */
     margin: 0;
