--- a/src/app/user-status.component.html
+++ b/src/app/user-status.component.html
@@ -3,11 +3,9 @@
     <div class="status-panel">
       <a *ngIf="loginInfo.nickname" class="user-name" [routerLink]="['/user']">{{loginInfo.nickname}}</a>
 
-      <div *ngIf="!loginInfo || !(loginInfo.nickname)" class="login-panel">
-        <!-- Show Google's Sign-in button here.
-        This would change to a "Signed In" button if we were signed in,
-        but that doesn't seem useful, and we can't use it to navigate to our own user page. -->
-        <div id="{{googleLoginButtonId}}"></div>
+      <div *ngIf="!(loginInfo.nickname)" class="login-panel">
+        <!-- TODO: use the properly-branded login button. -->
+        <a *ngIf="loginInfo.loginUrl" href="{{loginInfo.loginUrl}}">Sign In</a>
       </div>
     </div>
 
