--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -6,12 +6,12 @@
       <a *ngIf="loginInfo.nickname" class="user-name" [routerLink]="['/user']">{{loginInfo.nickname}}</a>
 
       <div *ngIf="!(loginInfo.nickname)" class="login-panel">
-        <a *ngIf="loginInfo.loginUrl" href="{{loginInfo.loginUrl}}">Sign In</a>
+        <a href="http://betaapi.bigoquiz.com/login/login">Sign In With Google</a>
       </div>
     </div>
 
     <p *ngIf="showLogOutWhenAppropriate && loginInfo.nickname">
-      <a href="{{loginInfo.logoutUrl}}">Log Out</a>
+      <a href="http://betaapi.bigoquiz.com/login/logout">Log Out</a>
     </p>
   </ng-container>
 </div>
