login: Show the error message from the JSON, if any.

--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -15,7 +15,7 @@
     </p>
 
     <p *ngIf="loginFailed">
-      Login failed.
+      Login Failed: {{loginInfo.errorMessage}}
     </p>
   </ng-container>
 </div>
