user-status: Correct the Log Out label.

--- a/src/app/user-status.component.html
+++ b/src/app/user-status.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <p *ngIf="showLogOutWhenAppropriate && loginInfo.nickname">
-      <a [routerLink]="['/logout']">Sign In</a>
+      <a [routerLink]="['/logout']">Log Out</a>
     </p>
   </ng-container>
 </div>
