user/, login/: login/logout GET calls: Specify redirect.
To avoid us having to hard-code it in the server code.

--- a/src/app/user-status.component.html
+++ b/src/app/user-status.component.html
@@ -9,7 +9,8 @@
     </div>
 
     <p *ngIf="showLogOutWhenAppropriate && loginInfo.nickname">
-      <a [routerLink]="['/logout']">Log Out</a>
+    <!-- TODO: Don't hard-code the URLs." -->
+      <a href="http://betaapi.bigoquiz.com/login/logout?redirect=http://beta.bigoquiz.com/user">Log Out</a>
     </p>
   </ng-container>
 </div>
