--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -6,15 +6,14 @@
       <a *ngIf="loginInfo.nickname" class="user-name" [routerLink]="['/user']">{{loginInfo.nickname}}</a>
 
       <div *ngIf="!(loginInfo.nickname)" class="login-panel">
-        <a href="http://betaapi.bigoquiz.com/login/login">Sign In With Google</a>
+        <!-- TODO: Don't hard-code the URLs." -->
+        <a href="http://betaapi.bigoquiz.com/login/login?redirect=http://beta.bigoquiz.com/user">Sign In With Google</a>
       </div>
     </div>
 
-    <p *ngIf="showLogOutWhenAppropriate && loginInfo.nickname">
-      <a href="http://betaapi.bigoquiz.com/login/logout">Log Out</a>
-    </p>
-
     <p *ngIf="loginFailed">
+      <!-- This actually comes from the /api/user-status GET,
+           after the failed login, but it can still be a useful hint. -->
       Login Failed: {{loginInfo.errorMessage}}
     </p>
   </ng-container>
