user/, login/: Don't hardcode the server URLs in the .html files.
Use the Config, as we do already elsewhere.

--- a/src/app/user-status.component.html
+++ b/src/app/user-status.component.html
@@ -9,8 +9,7 @@
     </div>
 
     <p *ngIf="showLogOutWhenAppropriate && loginInfo.nickname">
-    <!-- TODO: Don't hard-code the URLs." -->
-      <a href="http://betaapi.bigoquiz.com/login/logout?redirect=http://beta.bigoquiz.com/user">Log Out</a>
+      <a href="{{logoutUrl}}">Log Out</a>
     </p>
   </ng-container>
 </div>
