--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -6,8 +6,7 @@
       <a *ngIf="loginInfo.nickname" class="user-name" [routerLink]="['/user']">{{loginInfo.nickname}}</a>
 
       <div *ngIf="!(loginInfo.nickname)" class="login-panel">
-        <!-- TODO: Don't hard-code the URLs." -->
-        <a href="http://betaapi.bigoquiz.com/login/login?redirect=http://beta.bigoquiz.com/user">Sign In With Google</a>
+        <a href="{{loginUrl}}">Sign In With Google</a>
       </div>
     </div>
 
