--- a/src/app/user-history-sections.component.html
+++ b/src/app/user-history-sections.component.html
@@ -8,14 +8,13 @@
           <p>Please <a [routerLink]="['/login']">sign in</a> to track your progress and identify problem questions.</p>
         </ng-container>
 
-        <div *ngFor="let section of userHistorySections.sections"
+        <div *ngFor="let stats of userHistorySections.stats"
           class="user-history-quiz-section">
-          <h3><a [routerLink]="['/question']" [queryParams]="{'quiz-id': quizId, 'section-id': section.id}">{{section.title}}</a></h3>
-          <ng-container *ngIf="userHistorySections.getUserStatsForSection(section.id); let stats">
+          <h3><a [routerLink]="['/question']" [queryParams]="{'quiz-id': quizId, 'section-id': stats.sectionId}">{{stats.sectionTitle}}</a></h3>
             <div class="progress-bar">
-              <p class="progress-part-correct-once" [ngStyle]="{'width': stats.percentCorrectOnce(section.questionsCount)}">{{stats.countQuestionsCorrectOnce}} correct once</p>
-              <p class="progress-part-answered-once" [ngStyle]="{'width': stats.percentAnsweredOnce(section.questionsCount)}">{{stats.countQuestionsAnsweredOnce}} answered once</p>
-              <p class="progress-part-count" style="width: 100%">{{section.questionsCount}} questions</p>
+              <p class="progress-part-correct-once" [ngStyle]="{'width': stats.percentCorrectOnce(stats.questionsCount)}">{{stats.countQuestionsCorrectOnce}} correct once</p>
+              <p class="progress-part-answered-once" [ngStyle]="{'width': stats.percentAnsweredOnce(stats.questionsCount)}">{{stats.countQuestionsAnsweredOnce}} answered once</p>
+              <p class="progress-part-count" style="width: 100%">{{stats.questionsCount}} questions</p>
             </div>
 
             <h4>Problem Questions</h4>
@@ -26,13 +25,12 @@
                 <ng-container *ngFor="let question of stats.topProblemQuestionHistories">
                   <p class="problem-answer clearfix">
                   <span class="problem-answer-score">-{{question.countAnsweredWrong}}</span>
-                    <a class="problem-answer-hyperlink" [routerLink]="['/question']" [queryParams]="{'quiz-id': quizId, 'section-id': section.id, 'question-id': question.questionId}">{{questionTitle(question)}}</a>
+                    <a class="problem-answer-hyperlink" [routerLink]="['/question']" [queryParams]="{'quiz-id': quizId, 'section-id': stats.sectionId, 'question-id': question.questionId}">{{questionTitle(question)}}</a>
                   </p>
                 </ng-container>
               </ng-template>
 
             </div>
-          </ng-container>
         </div>
       </ng-container>
     </div>
