--- a/src/app/user.component.html
+++ b/src/app/user.component.html
@@ -8,14 +8,12 @@
     <div class="user-status-answers-panel">
 
     <ng-container *ngIf="userHistoryQuizzes">
-      <div *ngFor="let quiz of userHistoryQuizzes.quizzes"
+      <div *ngFor="let stats of userHistoryQuizzes.stats"
         class="quiz-section">
-        <h3><a [routerLink]="['/history']" [queryParams]="{'quiz-id': quiz.id}">{{quiz.title}}</a></h3>
-        <div *ngIf="userHistoryQuizzes.getUserStatsForQuiz(quiz.id); let stats" class="progress-bar">
-          <p class="progress-part-correct-once" [ngStyle]="{'width': stats.percentCorrectOnce(quiz.questionsCount)}">{{stats.countQuestionsCorrectOnce}} correct once</p>
-          <p class="progress-part-answered-once" [ngStyle]="{'width': stats.percentAnsweredOnce(quiz.questionsCount)}">{{stats.countQuestionsAnsweredOnce}} answered once</p>
-          <p class="progress-part-count" style="width: 100%">{{quiz.questionsCount}} questions</p>
-        </div>
+        <h3><a [routerLink]="['/history']" [queryParams]="{'quiz-id': stats.quizId}">{{stats.quizTitle}}</a></h3>
+          <p class="progress-part-correct-once" [ngStyle]="{'width': stats.percentCorrectOnce(stats.questionsCount)}">{{stats.countQuestionsCorrectOnce}} correct once</p>
+          <p class="progress-part-answered-once" [ngStyle]="{'width': stats.percentAnsweredOnce(stats.questionsCount)}">{{stats.countQuestionsAnsweredOnce}} answered once</p>
+          <p class="progress-part-count" style="width: 100%">{{stats.questionsCount}} questions</p>
       </div>
     </ng-container>
     </div>
