--- a/src/app/question.component.html
+++ b/src/app/question.component.html
@@ -17,8 +17,8 @@
 
     <ng-container [ngModel]="submissionResult" name="result" ngDefaultControl>
       <div *ngIf="question.choices" class="choices-panel clearfix">
-        <span *ngFor="let choice of question.choices" class="question-radio-button">
-          <input id="foo" name="choices" value="on" type="radio" [checked]="choiceIsCorrect(choice.text)" (click)="onChoiceClicked(choice.text)"/>
+        <span *ngFor="let choice of question.choices" class="question-radio-button" [ngClass]="{'question-radio-button-correct': showAnswer && choiceIsCorrect(choice.text) }">
+          <input id="foo" name="choices" value="on" type="radio" (click)="onChoiceClicked(choice.text)"/>
           <label for="foo" (click)="onChoiceClicked(choice.text)">{{choice.text}}</label>
         </span>
       </div>
