--- a/src/app/user.component.html
+++ b/src/app/user.component.html
@@ -10,7 +10,7 @@
     <ng-container *ngIf="userHistoryQuizzes">
       <div *ngFor="let stats of userHistoryQuizzes.stats"
         class="quiz-section">
-        <h3><a [routerLink]="['/history']" [queryParams]="{'quiz-id': stats.quizId}">{{stats.quizTitle}}</a></h3>
+        <h3><a [routerLink]="['/history']" [queryParams]="{'quiz-id': stats.quizId}">Quiz: {{stats.quizTitle}}</a></h3>
           <p class="progress-part-correct-once" [ngStyle]="{'width': stats.percentCorrectOnce(stats.countQuestions)}">{{stats.countQuestionsCorrectOnce}} correct once</p>
           <p class="progress-part-answered-once" [ngStyle]="{'width': stats.percentAnsweredOnce(stats.countQuestions)}">{{stats.countQuestionsAnsweredOnce}} answered once</p>
           <p class="progress-part-count" style="width: 100%">{{stats.countQuestions}} questions</p>
