HistoryComponent: Access the child view to get the quiz title.
Which it gets from the JSON.
This uses @ViewChild. See
https://angular.io/guide/component-interaction#parent-calls-an-viewchild
It also uses @Output and and EventEmitter to signal to the parent view
when the child view has the data from the JSON:
https://angular.io/guide/component-interaction#parent-listens-for-child-event

--- a/src/app/history.component.html
+++ b/src/app/history.component.html
@@ -1,6 +1,8 @@
 <div class="content-panel">
   <h2 class="page-title-label">Quiz</h2>
-  <!-- TODO: <h2 class="page-secondary-title-label">{{quiz.title}}</h2> -->
+  <h2 class="page-secondary-title-label">Quiz: {{quizTitle}}</h2>
 
-  <app-user-history-sections></app-user-history-sections>
+  <app-user-history-sections
+    (onJsonParsed)="onViewChildJsonParsed($event)">>
+  </app-user-history-sections>
 </div>
