HistoryComponent: Correct the title.

--- a/src/app/history.component.html
+++ b/src/app/history.component.html
@@ -1,5 +1,5 @@
 <div class="content-panel">
-  <h2 class="page-title-label">Quiz</h2>
+  <h2 class="page-title-label">History</h2>
   <h2 class="page-secondary-title-label">Quiz: {{quizTitle}}</h2>
 
   <button type="button" class="user-history-button-reset-sections" (click)="onResetClicked()">Reset</button>
