UserHistorySectionsComponent: Move sidebar-panel-sections div out.
Into the html of the components that use this child component,
so they can specify whether to show it in a sidebar.

--- a/src/app/history.component.html
+++ b/src/app/history.component.html
@@ -4,7 +4,9 @@
 
   <button type="button" class="user-history-button-reset-sections" (click)="onResetClicked()">Reset</button>
 
+  <div>
   <app-user-history-sections
     (onJsonParsed)="onViewChildJsonParsed($event)">>
   </app-user-history-sections>
+  </div>
 </div>
