--- a/src/app/question.component.html
+++ b/src/app/question.component.html
@@ -40,4 +40,7 @@
     </ng-container>
   </ng-container>
 </div>
-<app-user-history-sections></app-user-history-sections>
+
+<div class="sidebar-panel-sections">
+  <app-user-history-sections></app-user-history-sections>
+</div>
