--- a/src/app/quiz.component.html
+++ b/src/app/quiz.component.html
@@ -58,4 +58,7 @@
     </div>
   </div>
 </div>
-<app-user-history-sections></app-user-history-sections>
+
+<div class="sidebar-panel-sections">
+  <app-user-history-sections></app-user-history-sections>
+</div>
