--- a/src/styles.css
+++ b/src/styles.css
@@ -431,3 +431,17 @@ h4 * {
     color: red;
 }
 
+.sidebar-panel-sections {
+
+    /* See media query:
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    */
+
+    float: right;
+
+    /* TODO: Avoid this somehow? */
+    width: 330px; /* To avoid any text from making it too wide. Same as for sidebar-panel-links. */
+}
