--- a/src/app/quiz.component.css
+++ b/src/app/quiz.component.css
@@ -59,3 +59,23 @@
 .quiz-note {
     font-size: 80%;
 }
+
+.quiz-button-answer-questions {
+    /* Generic button style: */
+    margin: 0;
+    padding: 5px 7px;
+    text-decoration: none;
+
+    background: #B6B2DD;
+    color: #2F4550;
+    font-family: 'Lato', sans-serif;
+    margin-bottom: 1em;
+}
+
+a.quiz-button-answer-questions:visited {
+    color: #2F4550;
+}
+
+a.quiz-button-answer-questions:link {
+    color: #2F4550;
+}
