--- a/src/styles.css
+++ b/src/styles.css
@@ -398,7 +398,7 @@ h3 {
 h3 * {
     font-family: 'Lato', sans-serif;
     font-weight: 700;
-    color: #2F4550;
+    /* color: #2F4550; */
 }
 
 h4 {
