HistoryComponent: Don't pass event to onViewChildJsonParsed().
Because it doesn't take one.

--- a/src/app/history.component.html
+++ b/src/app/history.component.html
@@ -6,7 +6,7 @@
 
   <div>
   <app-user-history-sections
-    (onJsonParsed)="onViewChildJsonParsed($event)">>
+    (onJsonParsed)="onViewChildJsonParsed()">>
   </app-user-history-sections>
   </div>
 </div>
