UserHistorySectionsComponent: Move some CSS into top-level.
This was not being used, maybe because sidebar-panel-sections itself
was not used directly in this child component.

--- a/src/styles.css
+++ b/src/styles.css
@@ -177,6 +177,15 @@ body {
     zoom: 1;
 }
 
+.sidebar-panel-sections h2 {
+    margin-top: 1em;
+}
+
+/* TODO: Make this not apply to a h2 inside sub-divs? */
+.sidebar-panel-sections h2:first-child {
+    margin-top: 0;
+}
+
 .sidebar-panel-links {
     /* See media query:
     margin-left: 1rem;
