UserHistorySections: Show only the top 5 problem questions.
Using the slice syntax found here:
https://stackoverflow.com/a/37818735/1123654

--- a/src/app/user-history-sections.component.html
+++ b/src/app/user-history-sections.component.html
@@ -23,10 +23,11 @@
             <p>
 
             <ng-template #elseTemplate>
-              <p *ngFor="let question of stats.topProblemQuestionHistories" class="problem-answer clearfix">
+              <p *ngFor="let question of stats.topProblemQuestionHistories | slice:0:MAX_PROBLEM_QUESTIONS" class="problem-answer clearfix">
                 <span class="problem-answer-score">-{{question.countAnsweredWrong}}</span>
                 <a class="problem-answer-hyperlink" [routerLink]="['/question']" [queryParams]="{'quiz-id': quizId, 'section-id': stats.sectionId, 'question-id': question.questionId}">{{questionTitle(question)}}</a>
               </p>
+              <p *ngIf="stats.topProblemQuestionHistories.length > MAX_PROBLEM_QUESTIONS" class="problem-questions-more-questions">and {{stats.topProblemQuestionHistories.length - MAX_PROBLEM_QUESTIONS}} more</p>
             </ng-template>
 
           </div>
