--- a/src/app/question.component.html
+++ b/src/app/question.component.html
@@ -1,9 +1,7 @@
 <div class="content-panel">
   <h2 class="page-title-label">Question</h2>
 
-  <app-server-status
-    [showLoading]="serverState == ServerStateEnum.Loading"
-    [showError]="serverState == ServerStateEnum.Failed">
+  <app-server-status state="{{serverState}}">
   </app-server-status>
 
   <ng-container *ngIf="question">
