UserComponent: Use ServerStatusComponent to show loading/errors.

--- a/src/app/user.component.html
+++ b/src/app/user.component.html
@@ -1,6 +1,9 @@
 <div class="content-panel">
   <h2 class="page-title-label">Profile</h2>
 
+  <app-server-status state="{{serverState}}">
+  </app-server-status>
+
   <div class="user-status-panel">
     <app-user-status showLogOutWhenAppropriate="true"></app-user-status>
 
