About: Link to the go and angular github projects.

--- a/src/app/about.component.html
+++ b/src/app/about.component.html
@@ -2,7 +2,7 @@
   <h2>About</h2>
   <p>This site was created by <a href="https://murrayc.com/">Murray Cumming</a>, inspired by the <a href="http://bigocheatsheet.com/">Big-O Cheatsheet</a>. It now has several other quizzes on related subjects.</p>
 
-  <p>The source code, including the content of the quizzes, is in the <a href="https://github.com/murraycu/gwt-bigoquiz">gwt-bigoquiz</a> GitHub project.</p>
+  <p>The source code is in the <a href="https://github.com/murraycu/angular-bigoquiz-client">angular-bigoquiz-client</a> and <a href="https://github.com/murraycu/go-bigoquiz-server">go-bigoquiz-server</a> GitHub projects. The content of the quizzes is in the go-bigoquiz-server repository.</p>
 
   <br/>
   <br/>
